# JuQueue

./: .gitignore  README.md  cli.py  client.py  clusters.yaml  config.py  debug.py  juqueue.py  main.py  pyproject.toml  requirements.txt  server.py  todo.md  utils.py
backend/: backend.py  cluster_manager.py  experiment_manager.py  utils.py
cluster/: base.py  local.py  slurm.py
engine/: engine.py  manager.py
entities/: executor.py  experiment.py  parameter.py  run.py  run_state.py
example_defs/: clusters.yaml
example_defs/experiments/: helloworld.py
experiments/: .helloworld.py  .simclr_1layer.py  .simclr_1layer_hyp1_old.py  __init__.py  helloworld.py  random_eval_1layer.py  simclr_1layer.py  simclr_1layer_ft.py  simclr_1layer_hyp1.py  simclr_eval_1layer.py
juqueue/: __init__.py  __main__.py  config.py  exceptions.py  logger.py  models.py  utils.py
juqueue/api/: __init__.py  app.py  utils.py  websocket.py
juqueue/api/cluster/: cluster.py
juqueue/api/experiments/: experiment.py  run.py
juqueue/api/juqueue/: reload.py  stop_server.py
juqueue/assets/juqueue_web/: 3rdpartylicenses.txt  index.html  main.7ae65c44cc244833.js  main.93b1a4096950450a.js  main.978163dbff0dee71.js  (+5 more)
juqueue/backend/: backend.py  exceptions.py  run_instance.py  utils.py
juqueue/backend_old/: backend.py
juqueue/definitions/: __init__.py  cluster.py  executor.py  experiment.py  path.py  run.py  utils.py
juqueue_bin/: juqueue.py  main.py
juqueue_web/: generate.sh  openapi.json  package-lock.json  package.json
juqueue_web/juqueue-web/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
managers/: experiment.py  main.py
scripts/: zygote.sh
tests/: configs.py  worker.py  worker_manager.py
(+66 files in other folders)
